Intoduced uuids
Uuids are for indentifying routes, when you want to modify them. UUids don't get changed when tokens are regenerated and can be used in front end urls
